admin-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  labels:
    app: admin-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4001"
    spec:
      containers:
      - name: admin-service
        image: harshareddy2024/admin-service:latest
        ports:
        - containerPort: 4001
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
        readinessProbe:
          httpGet:
            path: /admin/actuator/health
            port: 4001
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /admin/actuator/health
            port: 4001
          initialDelaySeconds: 45
          periodSeconds: 15
