eurekha-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  labels:
    app: eureka-server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8761"
    spec:
      containers:
      - name: eureka-server
        image: harshareddy2024/eurekha-server:latest
        ports:
        - containerPort: 8761
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 45
          periodSeconds: 15
