faculty-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faculty-service
  labels:
    app: faculty-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: faculty-service
  template:
    metadata:
      labels:
        app: faculty-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4002"
    spec:
      containers:
      - name: faculty-service
        image: harshareddy2024/faculty-service:latest
        ports:
        - containerPort: 4002
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
        readinessProbe:
          httpGet:
            path: /faculty/actuator/health
            port: 4002
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /faculty/actuator/health
            port: 4002
          initialDelaySeconds: 45
          periodSeconds: 15
