student-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
  labels:
    app: student-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4003"
    spec:
      containers:
      - name: student-service
        image: harshareddy2024/student-service:latest
        ports:
        - containerPort: 4003
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
        readinessProbe:
          httpGet:
            path: /student/actuator/health
            port: 4003
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /student/actuator/health
            port: 4003
          initialDelaySeconds: 45
          periodSeconds: 15
