service.yaml

apiVersion: v1
kind: Service
metadata:
  name: eurekha-server
spec:
  selector:
    app: eurekha-server  # must match your deployment labels
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8761  # matches your Spring Boot server.port

---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  labels:
    app: admin-service
spec:
  selector:
    app: admin-service
  ports:
  - name: http  # Changed to follow Istio convention
    protocol: TCP
    port: 80
    targetPort: 4001

---

apiVersion: v1
kind: Service
metadata:
  name: student-service
  labels:
    app: student-service
spec:
  selector:
    app: student-service
  ports:
  - name: http  # Changed to follow Istio convention
    protocol: TCP
    port: 80
    targetPort: 4003

---

apiVersion: v1
kind: Service
metadata:
  name: faculty-service
  labels:
    app: faculty-service
spec:
  selector:
    app: faculty-service
  ports:
  - name: http  # Changed to follow Istio convention
    protocol: TCP
    port: 80
    targetPort: 4001

---
# api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway  # must match your deployment labels
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000  # matches your Spring Boot server.port
