istio-destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: admin-service
spec:
  host: admin-service.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: admin-service
spec:
  host: faculty-service.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: student-service
spec:
  host: student-service.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
