istio-virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-gateway
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: /admin
    route:
    - destination:
        host: admin-service.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /faculty
    route:
    - destination:
        host: faculty-service.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /student
    route:
    - destination:
        host: student-service.default.svc.cluster.local
        port:
          number: 80
